deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mochimochi-obinox-discord-bot-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mochimochi-obinox-discord-bot
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mochimochi-obinox-discord-bot
    spec:
      containers:
      - image: obinox/mochimochi
        imagePullPolicy: Always
        name: mochimochi-obinox-discord-bot
