service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cse-undergrad-gp-manage-service
spec:
  ports:
    - port: 80
      targetPort: 8091
      protocol: TCP
  selector:
    app.kubernetes.io/name: cse-undergrad-gp-manage
