ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cse-undergrad-gp-manage-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-clusterissuer'
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
  
spec:
  tls:
    - hosts:
        - cssys.cs.skku.ac.kr
      secretName: gitops-tls
  rules:
    - host: cssys.cs.skku.ac.kr
      http:
        paths:
          - backend:
              service:
                name: cse-undergrad-gp-manage-service
                port:
                  number: 80
            path: /
            pathType: Prefix
